--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "add": "^2.0.6",
     "bootstrap": "^5.3.0",
     "moment": "^2.29.4",
+    "ng-multiselect-dropdown": "^0.3.9",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.5.3",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
