--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.0.0",
+    "@angular/animations": "^16.1.1",
     "@angular/cdk": "^16.1.1",
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
     "@angular/forms": "^16.0.0",
     "@angular/material": "^16.1.1",
+    "@angular/material-moment-adapter": "^16.1.1",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
@@ -24,6 +25,7 @@
     "bootstrap": "^5.3.0",
     "moment": "^2.29.4",
     "ng-multiselect-dropdown": "^0.3.9",
+    "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.5.3",
     "zone.js": "~0.13.0"
