--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "allowSyntheticDefaultImports": true // ADD FOR ME TO RUN WITHOUT ERRORS
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
