--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.3.0",
     "moment": "^2.29.4",
     "ng-multiselect-dropdown": "^0.3.9",
+    "ngx-mask": "^14.0.1",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.5.3",
