--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smart-donnes",
+  "name": "sinaf-front",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -10,25 +10,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.1.1",
-    "@angular/cdk": "^16.1.1",
+    "@angular/animations": "^16.0.0",
+    "@angular/cdk": "^16.1.4",
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
     "@angular/forms": "^16.0.0",
-    "@angular/material": "^16.1.1",
-    "@angular/material-moment-adapter": "^16.1.1",
+    "@angular/material": "^16.1.4",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
-    "add": "^2.0.6",
+    "angularx-qrcode": "^16.0.0",
     "bootstrap": "^5.3.0",
-    "moment": "^2.29.4",
-    "ng-multiselect-dropdown": "^0.3.9",
-    "ngx-mask": "^14.0.1",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
-    "tslib": "^2.5.3",
+    "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
